db/k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
        network-backend: "true"
    spec:
      containers:
      - name: mysql
        image: mysql:5.7
        args:
        - "--ignore-db-dir=lost+found"
        ports:
        - containerPort: 3306
        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
        - name: mysql-initdb
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: init.sql
          readOnly: true
        - name: mysql-data-storage
          mountPath: /var/lib/mysql
      restartPolicy: Always
      volumes:
        - name: mysql-initdb
          configMap:
            name: mysql-initdb-config
        - name: mysql-data-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
