db/k8s/mysql.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: db
  type: ClusterIP
