db/k8s/netpol-access-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-access
  namespace: acme-shop
spec:
  podSelector:
    matchLabels:
      name: db
  ingress:
    - from:
      - podSelector:
          matchLabels:
            name: backend
      ports:
        - protocol: TCP
          port: 3306
